<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    android:background="@color/fondo"
    tools:context=".Creador">

    <TextView
        android:background="@color/navy"
        android:textColor="@android:color/white"
        android:text="CREADORES"
        android:padding="5dp"
        android:textSize="25dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
<!--
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="78dp"
        android:src="@drawable/log">

    </ImageView>
    -->
    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/textView21w"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:text="@string/carrera"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText" />


    <TextView
        android:id="@+id/textView221"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/Devs"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        tools:ignore="HardcodedText" />




        <LinearLayout
            style="@style/miEstilo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/space20dp"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/D1"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                tools:ignore="HardcodedText" />



            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/D2"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                tools:ignore="HardcodedText" />


            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/D3"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                tools:ignore="HardcodedText" />



            <TextView
                android:id="@+id/textView26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/D4"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                tools:ignore="HardcodedText" />


            <!--
            <ImageView
                android:id="@+id/imageButton2"
                android:layout_width="400dp"
                android:layout_height="@dimen/space300dp"
                android:src="@drawable/cv"
                android:layout_gravity="center"/>
            -->


        </LinearLayout>

</LinearLayout>